// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`emptyText prop should render the custom empty text 1`] = `
<div
  class="treeselect"
  id="test-container"
>
  <div
    class="treeselect-input treeselect-input--value-not-selected treeselect-input--bottom treeselect-input--opened"
    tabindex="-1"
  >
    <div
      class="treeselect-input__tags"
    >
      <input
        class="treeselect-input__edit"
        placeholder="Search..."
      />
    </div>
    <div
      class="treeselect-input__operators"
    >
      <span
        class="treeselect-input__clear"
        tabindex="-1"
      >
        <svg
          fill="none"
          height="15"
          stroke="#000000"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 25 25"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="15"
            x2="9"
            y1="9"
            y2="15"
          />
          <line
            x1="9"
            x2="15"
            y1="9"
            y2="15"
          />
        </svg>
      </span>
      <span
        class="treeselect-input__arrow"
      >
        <svg
          fill="none"
          height="15"
          stroke="#000000"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 25 25"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 15l-6-6-6 6"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    class="treeselect-list treeselect-list--bottom"
    direction="bottom"
  >
    <div
      class="treeselect-list__empty"
      title="No data"
    >
      <span
        class="treeselect-list__empty-icon"
      >
        <svg
          fill="none"
          height="15"
          stroke="#000000"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 25 25"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
          />
          <line
            x1="12"
            x2="12"
            y1="9"
            y2="13"
          />
          <line
            x1="12"
            x2="12.01"
            y1="17"
            y2="17"
          />
        </svg>
      </span>
      <span
        class="treeselect-list__empty-text"
      >
        No data
      </span>
    </div>
  </div>
</div>
`;

exports[`emptyText prop should render the empty text by default 1`] = `
<div
  class="treeselect"
  id="test-container"
>
  <div
    class="treeselect-input treeselect-input--value-not-selected treeselect-input--bottom treeselect-input--opened"
    tabindex="-1"
  >
    <div
      class="treeselect-input__tags"
    >
      <input
        class="treeselect-input__edit"
        placeholder="Search..."
      />
    </div>
    <div
      class="treeselect-input__operators"
    >
      <span
        class="treeselect-input__clear"
        tabindex="-1"
      >
        <svg
          fill="none"
          height="15"
          stroke="#000000"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 25 25"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="15"
            x2="9"
            y1="9"
            y2="15"
          />
          <line
            x1="9"
            x2="15"
            y1="9"
            y2="15"
          />
        </svg>
      </span>
      <span
        class="treeselect-input__arrow"
      >
        <svg
          fill="none"
          height="15"
          stroke="#000000"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 25 25"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 15l-6-6-6 6"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    class="treeselect-list treeselect-list--bottom"
    direction="bottom"
  >
    <div
      class="treeselect-list__empty"
      title="No results found..."
    >
      <span
        class="treeselect-list__empty-icon"
      >
        <svg
          fill="none"
          height="15"
          stroke="#000000"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 25 25"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
          />
          <line
            x1="12"
            x2="12"
            y1="9"
            y2="13"
          />
          <line
            x1="12"
            x2="12.01"
            y1="17"
            y2="17"
          />
        </svg>
      </span>
      <span
        class="treeselect-list__empty-text"
      >
        No results found...
      </span>
    </div>
  </div>
</div>
`;
